# LLVM_example

./: CMakeLists.txt  README.md
makefile_example/: Makefile
src/: CMakeLists.txt
src/dce/: CMakeLists.txt  Makefile  My_DCE.cpp
src/dce/test/: Makefile  hello.bc  hello.c  hello.ll  hello_changed.bc  hello_changed.ll
src/functionPass/: CMakeLists.txt  FunctionPass.cpp  FunctionPass.cpp.bak  Makefile  name.h
